# semantic-nav

./: .gitignore  CMakeLists.txt  README.md
include/: place_recognition.hpp
src/: color_thresholding_test.cpp  histogram_test.cpp  place_recognition.cpp  place_recognition_test.cpp  semantic_main.cpp  superpixel_seeds_test.cpp  surf_test.cpp
