cmake_minimum_required(VERSION 2.8)
project(semantic_nav)
add_definitions("-std=gnu++11")
#include_directories(include)
find_package(OpenCV REQUIRED)

add_executable(photometric_test src/photometric_test.cpp)
add_executable(watershed_test src/watershed_test.cpp)
add_executable(histogram_test src/histogram_test.cpp)
add_executable(color_thresholding_test src/color_thresholding_test.cpp)
add_executable(place_recognition src/place_recognition.cpp)

target_link_libraries(photometric_test ${OpenCV_LIBS})
target_link_libraries(watershed_test ${OpenCV_LIBS})
target_link_libraries(histogram_test ${OpenCV_LIBS})
target_link_libraries(color_thresholding_test ${OpenCV_LIBS})
target_link_libraries(place_recognition ${OpenCV_LIBS})
